# tenantbase

./: README.md
TenantBase/: pyproject.toml
TenantBase/tenantbase/: main.py  tbase_cache.db  web.py
TenantBase/tenantbase/interfaces/: memcache_interface.py  memecache_interface.py  sql_interface.py
TenantBase/tests/: test_tenantbase.py
